# news-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/: server.py
src/controllers/: news_sentiment_analyzer_controller.py
src/controllers/interfaces/: news_sentiment_analyzer_controller_interface.py
src/provider/: feeling_model_handler.py  feeling_model_handler_test.py  gemini_api_handler.py  gemini_api_handler_test.py  news_api_handler.py  news_api_handler_test.py
src/provider/interfaces/: feeling_model_handler_interface.py  gemini_api_handler_interface.py  news_api_handler_interface.py
